Fix footer overlapping content in about.html, work.html and contact.html

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -13,10 +13,10 @@ html {
 *,
 ::after,
 ::before {
-    -webkit-box-sizing: inherit;
-            box-sizing: inherit;
-    margin: 0;
-    padding: 0;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -224,10 +224,13 @@ button:focus,
 /* main content */
 
 .main-content {
-  height: 100vh;
   margin: 0 auto;
   max-width: 700px;
   padding: 40px 0;
+}
+
+.main-content.index {
+  height: 100vh;
 }
 
 /* footer */
@@ -391,7 +394,7 @@ button:focus,
   }
 }
 
-@media all and (min-width: 500px) and (max-width: 750px){
+@media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
     -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
@@ -419,9 +422,11 @@ button:focus,
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
@@ -431,9 +436,11 @@ button:focus,
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
@@ -444,6 +451,7 @@ button:focus,
     -webkit-transform: translate(0, 50px);
             transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
             transform: translate(200px, 50px);
@@ -455,6 +463,7 @@ button:focus,
     -webkit-transform: translate(0, 50px);
             transform: translate(0, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
             transform: translate(200px, 50px);
@@ -466,6 +475,7 @@ button:focus,
     -webkit-transform: translate(446px, 48px);
             transform: translate(446px, 48px);
   }
+
   to {
     -webkit-transform: translate(100px, 48px);
             transform: translate(100px, 48px);
@@ -477,6 +487,7 @@ button:focus,
     -webkit-transform: translate(446px, 48px);
             transform: translate(446px, 48px);
   }
+
   to {
     -webkit-transform: translate(100px, 48px);
             transform: translate(100px, 48px);
